--- a/src/renderer/styles/panels/PathPanel.scss
+++ b/src/renderer/styles/panels/PathPanel.scss
@@ -1,5 +1,5 @@
 .PathPanel {
-    height: 4vh;
+    grid-area: 1 / 1 / 2 / 2;
     padding: 0.3em 0 0.3em 1em;
     display: flex;
     align-items: center;
