--- a/src/renderer/styles/panels/Status.scss
+++ b/src/renderer/styles/panels/Status.scss
@@ -1,7 +1,5 @@
 .Status {
-    position: relative;
-    top: 97vh;
-    height: 3vh;
+    grid-area: 100 / 1 / 101 / 25;
     padding: 0.2em 1em 0 1em;
     display: flex;
     justify-content: space-between;
